--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,25 @@
-django
-faker
-requests
-mysqlclient
+argon2-cffi==20.1.0
+asgiref==3.3.1
+bcrypt==3.2.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+Django==3.1.5
+django-filter==2.4.0
+djangorestframework==3.12.2
+Faker==5.8.0
+httpie==2.3.0
+idna==2.10
+Markdown==3.3.3
+mysqlclient==2.0.3
+pycparser==2.20
+Pygments==2.7.4
+PySocks==1.7.1
+python-dateutil==2.8.1
+pytz==2020.5
+requests==2.25.1
+requests-toolbelt==0.9.1
+six==1.15.0
+sqlparse==0.4.1
+text-unidecode==1.3
+urllib3==1.26.3
